--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="three-columns">
   <article class="sedans-box">
-    <img src="/images/icon-sedans.svg" alt="sedans-icon">
+    <img src="/images/icon-sedans.svg" alt="sedans-icon" width="80px">
   <h1>Sedans</h1>
   <p> Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
   or on your next road trip.</p>
@@ -30,7 +30,7 @@
   </article>
   
   <article class="suv-box">
-    <img src="/images/icon-suvs.svg" alt="suvs-icon">
+    <img src="/images/icon-suvs.svg" alt="suvs-icon" width="80px">
     <h1>SUVs</h1>
     <p> Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
       and off-road adventures.</p>
@@ -38,7 +38,7 @@
     </article>
     
     <article class="luxury-box">
-      <img src="/images/icon-luxury.svg" alt="luxury-icon">
+      <img src="/images/icon-luxury.svg" alt="luxury-icon" width="80px">
       <h1>Luxury</h1>
       <p> Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
